Add other important stuff

--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
   <body>
     <main>
       <div class="mainCont">
-      
-          Je to už 
-          <br>
-          <span id="counter">0</span>
-          <br>
+         <h1>Je to už</h1>  
+          <span class="counter" id="quarantine">0</span>
           dní od začátku karantény
+          <br>
+          <span class="counter" id="school">0</span>
+          dní od uzavření škol
+          <br>
+          <span class="counter" id="mask">0</span>
+          dní od toho, co jsme začali nosit roušky
    
       </div>
     </main>
