--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </main>
     <footer>
       <p>
-        vytvořeno <a href="https://filiptronicek.github.io">Filipem Troníčkem</a> 
+        vytvořeno <a href="https://trnck.dev">Filipem Troníčkem</a> 
       </p>
     </footer>
   </body>
